# metalmind

./: .gitignore  CHANGELOG.md  LICENSE  README.md  biome.json  install-plugins.sh  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uninstall.sh
.github/workflows/: ci.yml  publish.yml
bench/mcp-tax-v0/: README.md  run.mjs
bench/mcp-tax-v0/fixtures/: claude-code-native-memory.json  mem0.json  metalmind-instruction-block.txt  metalmind-loopback.json  metalmind-stdio.json
bench/mcp-tax-v0/results/: results-latest.csv  results-latest.json
bench/mcp-tax-v0/scripts/: capture-mem0.md
bench/recall-v0/: README.md  questions.json  run.mjs
bench/recall-v0/fake-vault/: auth-model.md  decision-postgres-over-cockroach.md  deployment-targets.md  hiring-freeze.md  incident-2026-02-14.md  observability-choice.md  pricing-tiers.md  project-wingspan.md  rls-ban.md  sdk-versions.md  team.md  (+1 more)
cli/: README.md  package.json  tsup.config.ts  vitest.config.ts
cli/assets/: marsh.md  terse.md
cli/scripts/: sync-vault-rag-pkg.mjs
cli/src/: cli.ts  config.test.ts  config.ts
cli/templates/vault-rag-pkg/: .gitignore  pyproject.toml
cli/templates/vault-rag-pkg/metalmind_vault_rag/: core.py  http_server.py  indexer.py  search.py  server.py  watcher.py
cli/templates/vault-rag-pkg/tests/: test_smoke.py
docs/: customization.md  plugins.md  post-install.md  prerequisites.md  teams.md
site/: astro.config.mjs  package.json
templates/claude/: CLAUDE.md.template
templates/claude-stack/: compose.yml
templates/launchd/: com.claude.vault-indexer.plist.template
(+149 files in other folders)
